@startuml
'https://plantuml.com/class-diagram

class Etablissement {
-id
-nom
-rne
-code
-ponctuel
}


class Ville {
-id
-nom
-codePostal
-gps
}

class Professeur{
-id
-nom
-prenom
-email
+estDispo()
}

class Specialite{
-id
-libelle
}


class EEA{
-id
-maxJuryParJour
-nbCandidats
}

class SessionE5{
-id
-libelle
-dateDebut
-dateFin
}

class Jury{
-id
-num
+getProfProcheEtDispo()
}


class JourPassage{
-id
-dateJour

}

Professeur "*" -- "1" Ville
Professeur "*" -- "1" Specialite
Professeur "2" -- "*" Jury
Professeur "*" -- "1" Etablissement
Professeur "*" -- "*" SessionE5

Professeur "*" -- "*" JourPassage

JourPassage "1" -- "*" Jury
JourPassage "*" -- "*" Etablissement
JourPassage "*" -- "1" SessionE5

EEA "1" -- "*" Jury
EEA "*" -- "1" SessionE5
EEA "*" -- "1" Etablissement

Ville "1" -- "*" Etablissement







hide circle

@enduml
